[gd_scene load_steps=2 format=3 uid="uid://6lafqg46o07d"]

[ext_resource type="Script" path="res://scripts/quarry_slot_ui.gd" id="1_cqul8"]

[node name="QuarrySlotUI" type="VBoxContainer"]
offset_right = 181.0
offset_bottom = 124.0
size_flags_horizontal = 3
script = ExtResource("1_cqul8")

[node name="TitleLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Empty Quarry Slot"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DigButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "+1"

[node name="DigProgressBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(2.08165e-12, 27)
layout_mode = 2
show_percentage = false

[node name="SellButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Sell"

[node name="DigTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true
